Изменение работы некоторых классов