@@ -1,115 +1,146 @@
 package ru.yandex.practicum.filmorate.service;
 
+import io.micrometer.common.util.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import ru.yandex.practicum.filmorate.dal.FriendshipRepository;
+import ru.yandex.practicum.filmorate.dal.UserRepository;
+import ru.yandex.practicum.filmorate.dto.UserDto;
+import ru.yandex.practicum.filmorate.dto.request.NewUserRequest;
+import ru.yandex.practicum.filmorate.dto.request.UpdateUserRequest;
 import ru.yandex.practicum.filmorate.exceptions.NotFoundException;
 import ru.yandex.practicum.filmorate.exceptions.ValidationException;
+import ru.yandex.practicum.filmorate.mapper.UserMapper;
 import ru.yandex.practicum.filmorate.model.User;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
+import ru.yandex.practicum.filmorate.storage.user.friendship.FriendshipStorage;
 
 import java.time.LocalDate;
-import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 
 @Service
 public class UserService {
-    private final UserStorage inMemoryUserStorage;
     private static final Logger log = LoggerFactory.getLogger(UserService.class);
+    private final UserStorage us;
+    private final FriendshipStorage fss;
 
     @Autowired
-    public UserService(UserStorage inMemoryUserStorage) {
-        this.inMemoryUserStorage = inMemoryUserStorage;
+    public UserService(UserRepository userRepository, FriendshipRepository friendshipRepository) {
+        this.fss = friendshipRepository;
+        this.us = userRepository;
     }
 
-    public List<User> findAll() {
-        return inMemoryUserStorage.findAll();
+    public List<UserDto> findAll() {
+        return us.findAll().stream()
+                .map(UserMapper::mapToUserDto)
+                .toList();
     }
 
-    public User create(User user) {
+    public UserDto create(NewUserRequest request) {
+        User user = UserMapper.mapToUser(request);
         validateUser(user);
-        return inMemoryUserStorage.create(user);
+        user = us.create(user);
+        return UserMapper.mapToUserDto(user);
     }
 
-    public User update(User user) {
-        validateUser(user);
-        return inMemoryUserStorage.update(user);
+    public void removeUser(Integer id) {
+        us.delete(id);
     }
 
-    public User getUserById(Integer id) {
-        Optional<User> user = inMemoryUserStorage.getUserById(id);
-        if (user.isPresent()) {
-            return user.get();
-        } else throw new NotFoundException("Юзер с " + id + " отсутствует.");
+    public UserDto update(Integer id, UpdateUserRequest request) {
+        User updateUser = us.getUserById(id)
+                .map(user -> UserMapper.updateUserFields(user, request))
+                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
+        validateUser(updateUser);
+        us.update(updateUser);
+        return UserMapper.mapToUserDto(updateUser);
     }
 
-    public Optional<List<User>> getFriends(Integer id) {
-        return inMemoryUserStorage.getFriends(id);
+    public UserDto getUserById(Integer id) {
+        return us.getUserById(id)
+                .map(UserMapper::mapToUserDto)
+                .orElseThrow(() -> new NotFoundException("Пользователь не найден с ID:" + id));
+    }
+
+    public Optional<List<UserDto>> getFriends(Integer id) {
+        UserDto user = getUserById(id);
+        List<UserDto> result = fss.getFriends(id)
+                .stream()
+                .filter(Objects::nonNull)
+                .map(UserMapper::mapToUserDto)
+                .toList();
+        return Optional.of(result);
+    }
+
+    public UserDto getFriendById(Integer userId, Integer friendId) {
+        return fss.getFriendById(userId, friendId)
+                .map(UserMapper::mapToUserDto)
+                .orElseThrow(() -> new NotFoundException("У пользователя нет такого друга"));
     }
 
     public void addFriend(Integer userId1, Integer userId2) {
-        Optional<User> user1 = inMemoryUserStorage.getUserById(userId1);
-        Optional<User> user2 = inMemoryUserStorage.getUserById(userId2);
+        if (Objects.equals(userId1, userId2)) {
+            log.error("Нельзя добавить в друзья самого себя");
+            throw new ValidationException("Нельзя добавить в друзья самого себя");
+        }
+        Optional<User> user1 = us.getUserById(userId1);
+        Optional<User> user2 = us.getUserById(userId2);
         if (user1.isEmpty() || user2.isEmpty()) {
             log.error("Ошибка при добавлении друзей: один из пользователей не найден. {}, {}", userId2, userId1);
             throw new NotFoundException("Один из пользователей не найден");
         }
-        user1.get().addFriend(userId2);
-        user2.get().addFriend(userId1);
-        log.info("Пользователи добавлены в друзья");
+        fss.addFriend(userId1, userId2);
+        log.info("Пользователи {},{} добавлены в друзья", userId1, userId2);
     }
 
-    public void removeFriend(Integer userId1, Integer userId2) {
-        Optional<User> userOptional1 = inMemoryUserStorage.getUserById(userId1);
-        Optional<User> userOptional2 = inMemoryUserStorage.getUserById(userId2);
+    public UserDto removeFriend(Integer userId1, Integer userId2) {
+        Optional<User> userOptional1 = us.getUserById(userId1);
+        Optional<User> userOptional2 = us.getUserById(userId2);
         if (userOptional1.isEmpty() || userOptional2.isEmpty()) {
             log.error("Ошибка при удалении друзей: один из пользователей не найден. {}, {}", userId2, userId1);
             throw new NotFoundException("Один из пользователей не найден");
         }
-        userOptional1.get().removeFriend(userId2);
-        userOptional2.get().removeFriend(userId1);
-        log.info("Пользователи удалены из друзей");
+        fss.deleteFriend(userId1, userId2);
+        log.info("Пользователи {},{} удалены из друзей", userId1, userId2);
+        return getUserById(userId1);
     }
 
-    public Collection<User> getMutualFriends(Integer userId1, Integer userId2) {
-        Optional<User> userOptional1 = inMemoryUserStorage.getUserById(userId1);
-        Optional<User> userOptional2 = inMemoryUserStorage.getUserById(userId2);
-        List<User> result = new ArrayList<>();
+    public Collection<UserDto> getMutualFriends(Integer userId1, Integer userId2) {
+        Optional<User> userOptional1 = us.getUserById(userId1);
+        Optional<User> userOptional2 = us.getUserById(userId2);
         if (userOptional1.isEmpty() || userOptional2.isEmpty()) {
             log.error("Ошибка при получении общих друзей");
             throw new NotFoundException("Один из пользователей не найден");
         }
-        List<Integer> ids = userOptional1.get().getAllFriends();
-        User user2 = userOptional2.get();
-        for (Integer id : ids) {
-            if (user2.getFriend(id).isPresent()) {
-                inMemoryUserStorage.getUserById(id).ifPresent(result::add);
-            }
-        }
+        List<User> result = fss.getMutualFriends(userId1, userId2);
         if (result.isEmpty()) {
             log.error("Нет общих друзей");
             throw new NotFoundException("Общие друзья не найдены");
         }
         log.info("Возвращён список общих друзей пользователей: {}, {}", userId2, userId1);
-        return result;
+        return result.stream()
+                .map(UserMapper::mapToUserDto)
+                .toList();
     }
 
     private void validateUser(User user) {
         String email = user.getEmail();
-        if (email.isBlank() || !email.contains("@")) {
+        if (StringUtils.isBlank(email) || !email.contains("@")) {
             log.error("Ошибка при добавлении пользователя: некорректная почта - {}", email);
             throw new ValidationException("Некорректная электронная почта.");
         }
         String login = user.getLogin();
-        if (login.isEmpty() || login.isBlank() || login.contains(" ")) {
+        if (login.isEmpty() || StringUtils.isBlank(login) || login.contains(" ")) {
             log.error("Ошибка при добавлении пользователя: некорректный логин - {}", login);
             throw new ValidationException("Некорректный логин.");
         }
         String name = user.getName();
-        if (name == null || name.isEmpty() || name.isBlank()) {
+        if (name == null || name.isEmpty() || StringUtils.isBlank(name)) {
             log.info("Пользователь использует логин - {} вместо имени", user.getLogin());
             user.setName(user.getLogin());
         }
